# cutboard

./: package.json
src/: App.tsx  i18n.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  commands.rs  config.rs  database.rs  hotkey.rs  lib.rs  main.rs  sensitive.rs  window_tracker.rs
src/components/: AppList.tsx  ContentPanel.tsx  ImageList.tsx  Settings.tsx  SourceList.tsx  TextList.tsx
