[package]
name = "cutboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "cutboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cutboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
ureq = "2"
fancy-regex = "0.14"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2"
